test/files/pos/t6896.scala
object TooManyMains {
  def main(args: Array[String]): Unit = {
    println("Hello, World!")
  }
  def main(a: Int, b: Int) = ???
  def main(s: String, n: String) = ???
}
